--- a/FrontEnd/kiddohub/src/Style/sidebar.css
+++ b/FrontEnd/kiddohub/src/Style/sidebar.css
@@ -7,7 +7,7 @@ body {font-family: "Lato", sans-serif;}
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: #d4d3d2;
   overflow-x: hidden;
   padding-top: 16px;
 }
@@ -16,16 +16,16 @@ body {font-family: "Lato", sans-serif;}
   padding: 6px 8px 6px 16px;
   text-decoration: none;
   font-size: 16px;
-  color: #818181;
+  color: #050505;
   display: block;
 }
 
 .sidebar a:hover {
-  color: #f1f1f1;
+  color: #c31b1b;
 }
 
 .main {
-  margin-left: 160px; /* Same as the width of the sidenav */
+  margin-left: 160px; /*Same as the width of the sidenav */
   padding: 0px 10px;
 }
 
