--- a/FrontEnd/kiddohub/src/Style/table.css
+++ b/FrontEnd/kiddohub/src/Style/table.css
@@ -16,8 +16,9 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
+h2 {
     margin-bottom: 20px;
+    text-align: center;
 }
 
 table {
